Fixed global search screen size not being full width. Increased number of rows in the description column before truncation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,5 +6,6 @@
   & .content-container {
     display: flex;
     flex-direction: row;
+    height: 100%;
   }
 }
