--- a/src/app/views/main/global-search/global-search.component.scss
+++ b/src/app/views/main/global-search/global-search.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     padding: 2rem 1.5rem;
+    height: 100%;
+    flex: 1;
+    width: 94vw;
 
     & .global-search-title-container {
         display: flex;
